feat: Allow login via OIDC

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,14 @@ DB_USER=postgres
 DB_PASSWORD=your-db-password
 DB_HOST=localhost
 DB_PORT=5432
+
+# OIDC Configuration
+OIDC_ENABLED=False
+OIDC_RP_CLIENT_ID=your-client-id
+OIDC_RP_CLIENT_SECRET=your-client-secret
+OIDC_OP_AUTHORIZATION_ENDPOINT=https://your-oidc-provider.com/auth
+OIDC_OP_TOKEN_ENDPOINT=https://your-oidc-provider.com/token
+OIDC_OP_USER_ENDPOINT=https://your-oidc-provider.com/userinfo
+OIDC_OP_JWKS_ENDPOINT=https://your-oidc-provider.com/jwks
+OIDC_RP_SIGN_ALGO=RS256
+OIDC_RP_SCOPES=openid email profile
