--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "django>=5.2.8",
+    "mozilla-django-oidc>=4.0.1",
     "psycopg[binary]>=3.2.13",
     "python-dotenv>=1.2.1",
     "ruff>=0.14.6",
