--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 SECRET_KEY=your-secret-key-here
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
+# STATIC_ROOT=/var/www/argus_du_libre/static
 
 # Database
 DB_NAME=argus_du_libre
