feat: Add metrics

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Database
 DB_NAME=argus_du_libre
-DB_USER=postgres
-DB_PASSWORD=your-db-password
+DB_USER=argus_user
+DB_PASSWORD=your-secure-password
 DB_HOST=localhost
 DB_PORT=5432
 
